# spectacles

./: .fleet.workflow.js  .gitignore  .markdownlint.jsonc  LICENSE  README.md  mkdocs.yml
.minimal/: minimal.toml
decisions/: 0001-needs-human.md  0002-workflow-layout-and-imports.md  0003-bootstrapping-policy.md  0004-uses-distribution-model.md  0005-sub-issue-lifecycle-model.md  0006-pr-body-sanitizer.md  0007-parent-linked-sub-issues.md  0008-phase-c-task-dedupe.md  0009-sdd-ready-on-task-create.md  0010-plan-comment-before-tree.md  0011-dispatch-cascade.md  0012-fastpath.md  0013-promote-ready-on-blocker-close.md  0014-dispatch-fan-out-via-comment.md  0015-wrapper-logic-in-composite-actions.md  0016-advisory-thread-resolution.md  0017-distillery-memory-integration.md  0018-auto-recompile-locks.md  0018-fragment-lock-recompile-ordering.md  0019-auto-recompile-locks-on-main.md  0020-observability-mandate.md  0021-spec-arch-status-advance.md  0022-triage-task-sizing.md  0023-agile-single-pr-path.md  0023-status-surface.md  0024-agile-single-pr-path.md  0024-approve-auto-dispatch.md  0025-approve-auto-dispatch.md  0026-demoable-unit-sizing.md  0027-retrospective-spec-derivation.md  0028-collapse-single-task-units.md  0029-per-phase-triage-split.md  0030-execute-cooperative-staleness.md  0031-run-evaluation-split.md  TEMPLATE.md
docs/: index.md
scripts/: command-table-exceptions.yml  digest-snapshot.yml  e2e-assert.py  e2e-setup-staging.sh  leak-scan.sh  lifecycle-states.yml  (+11 more)
tests/fixtures/fmt-letchain/: Cargo.toml
tests/fixtures/fmt-letchain/src/: lib.rs
(+134 files in other folders)
